# game.libretro.desmume

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/desmume/: CMakeLists.txt  desmume.txt
game.libretro.desmume/: addon.xml  addon.xml.in  changelog.txt
game.libretro.desmume/resources/: settings.xml
game.libretro.desmume/resources/language/English/: strings.po
gameclient.desmume/: addon.xml
